Fixade Mobil och alla enheternas responsiva media width samt fixade ett bugg där produkt-lådorna går ut åt höger med overflow hidden

--- a/Style.css
+++ b/Style.css
@@ -1,5 +1,4 @@
-h1,
-.berkshire-swash-regular {
+h1,.berkshire-swash-regular {
     font-family: "Berkshire Swash", serif;
     font-weight: 400;
     font-style: normal;
@@ -22,7 +21,6 @@ h2 {
     border-radius: 25px;
     margin-left: 5%;
     margin-right: 5%;
-
 }
 
 body {
@@ -70,7 +68,7 @@ nav {
 .Noelles_varuhus {
     background-color: #D9D9D9;
     border-radius: 15px;
-    margin-left: 1%;
+    /* margin-left: 1%; */
     border: solid black 2px;
     display: flex;
     flex-direction: row;
@@ -121,6 +119,14 @@ main {
     /* align-items: center; */
 }
 
+#Kompressionbyxor-id{
+    width: fit-content;
+    height: fit-content;
+    max-width: fit-content;
+    max-height: fit-content;
+    margin-left: 5%;
+}
+
 #Överdragsbyxor-id {
     height: 72.5%;
 }
@@ -130,6 +136,8 @@ main {
     width: 70%;
     align-self: center;
     /* max-width: fit-content; */
+    /* position: relative; */
+    margin-left: 15%;
     max-height: fit-content;
 
 }
@@ -191,13 +199,68 @@ footer {
     main {
         grid-template-columns: repeat(2, 1fr);
     }
+
     nav {
         display: grid;
         grid-template-rows: 1fr;
         grid-template-columns: 2fr 3fr;
-        margin-top: 1%;    }
+        margin-top: 1%;
+    }
+
     .Noelles_varuhus {
         flex-direction: column;
         align-items: center;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    main {
+        display: grid;
+        grid-template-rows: 1fr;
+        grid-template-columns: 1fr;
+        max-width: 100%;
+        justify-content: center;
+        overflow-x: hidden;
+    }
+
+    nav {
+        display: grid;
+        grid-template-rows: 1fr;
+        grid-template-columns: 1fr;
+        margin-top: 1%;
+    }
+
+    header {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .Noelles_varuhus {
+        flex-direction: column;
+        align-items: center;
+        margin-top: 1%;
+        margin-right: 1%;
+    }
+
+    .img-logo {
+        height: 30%;
+        margin: 6px;
+        margin-bottom: 38%;
+    }
+
+    h1{
+        margin-right: 2%;
+    }
+    
+    .Produkt-lådor {
+        display: flex;
+        flex-direction: column;
+        background-color: #f0f0ed;
+        align-items: center;
+        border-radius: 25px;
+        margin-left: 2%;
+        margin-right: 2%;
+        overflow: hidden; /* Viktigt för att behålla border-radius */
     }
 }
